--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
- body{
+
+ body {
 
     background-color: #141414;
     height: 100vh;
@@ -12,30 +13,68 @@
     align-items: center;
 }
 
-  div{
+  div {
 
     background-color: #1f1f1f;
     width: 384px;
     padding: 40px;
     text-align: center;
     border-radius: 12px;
-  }
+}
 
-  h1,p,a{
+  h1,p,a {
 
     color: #FFF ; 
-  }
+}
 
 
-  div img{
+  div img {
 
     border-radius: 50%;
     margin-bottom: 24px;
-  }
+}
 
-  div h1{
+  div h1 {
 
     font-size: 24px;
     line-height: 36px;
     font-weight: 600;
-  }
+    margin-bottom: 4px;
+
+}
+
+div strong {
+
+   color: #c4f82a;
+   font-size: 14px;
+   line-height: 21px;
+
+}
+
+
+div p{
+
+
+    margin-block: 24px;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+div a + a {
+
+    margin-top: 15px;
+
+}
+
+div a {
+
+
+    display: block;
+    text-decoration: none;
+    background-color: #333333;
+    padding: 12px;
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: 14px;
+
+} 
