--- a/style.css
+++ b/style.css
@@ -76,5 +76,14 @@ div a {
     border-radius: 8px;
     font-weight: 700;
     font-size: 14px;
+    line-height: 21px;
 
 } 
+
+div a:hover{
+
+    background-color: #c4f82a;
+    color: #141414;
+    transition: 0.7s;
+
+}
